# meeta-dev-tools

./: .env.example  .gitignore  .mcp.json  LICENSE  README.md  docker-compose.yml  generate-real-report.js  git-sync-all.sh  package-lock.json  package.json  temp-downloaded-result.csv  temp-faq-result.csv  temp-test-result.csv  test-report-generator.js
ai-navi-backend-mock/: Dockerfile  Makefile  README.md  generate-token.mjs  github-issue-template.md  jest.config.js  package-lock.json  package.json  test-streaming.html  test-token.js  tsconfig.json
dynamodb-tools/: README.md  import_csv_to_dynamodb.py  package-lock.json  package.json  run_import.sh
excel-to-md/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
excel-to-md/excel_to_md/: __init__.py  __main__.py  cli.py
excel-to-md/excel_to_md/adapters/: __init__.py  llm_narrator.py  markdown_writer.py  stats_analyzer.py  xls_reader.py  xlsx_reader.py
excel-to-md/excel_to_md/domain/: __init__.py  errors.py  models.py  report.py
excel-to-md/excel_to_md/infrastructure/: __init__.py  config.py  file_layout.py
excel-to-md/excel_to_md/usecases/: __init__.py  analyze_workbook.py  convert_workbook.py  ports.py
excel-to-md/scripts/: make_demo_inputs.py
excel-to-md/tests/: __init__.py  conftest.py  fixtures.py  test_analyze.py  test_cli.py  test_convert.py  test_file_layout.py  test_narrator.py  test_reader.py  test_roundtrip.py  test_xls_reader.py
pactumjs_test/: README.md  basic-test-case.csv  csv_to_gsheet.js  index.js  makefile  package-lock.json  package.json  test_students_chat.js
(+147 files in other folders)
