[project]
name = "excel-to-md"
version = "0.1.0"
description = "엑셀(.xlsx/.xls)을 시트별 마크다운 표 + 분석(구조/통계/LLM)으로 변환하는 재사용 툴"
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.1,<3.2",   # .xlsx 읽기·병합셀·수식·이미지. private API(img._data/anchor._from) 검증 범위 핀(L6)
    "pandas>=2.0",     # 통계/이상치(describe, IQR, zscore)
    "Pillow>=10.0",    # openpyxl 이미지 추출에 필요
    "xlrd>=2.0",       # 레거시 .xls(BIFF) 읽기
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "xlwt>=1.3",   # 테스트 전용: 레거시 .xls 픽스처 생성(런타임 엔진은 읽기=xlrd)
]

[project.scripts]
excel-to-md = "excel_to_md.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "excel_to_md",
    "excel_to_md.domain",
    "excel_to_md.usecases",
    "excel_to_md.adapters",
    "excel_to_md.infrastructure",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
